[기타] Collectors로 변경